--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
   },
   "devDependencies": {
     "autod": "*",
-    "gnode": "*"
+    "gnode": "*",
+    "mocha": "~1.17.1",
+    "should": "3.1.2"
   }
 }
